amun/overlays/stage/amun-api/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.stage.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
    tls:
        caCertificate: ENC[AES256_GCM,data:wzGuLG3nwYgmOFUnRe0etUKcnTy4onQs93ljJCJuA/gQSdHL4uA1WiD3HmiGvxClg+assWN+uTn/43j4Q58+5FI+EyfgXs8AevA9yJ4XxzbS3KI3U3THgNUei4uMrAYCRZNvfzUeh1oO6t3KW5UpXS7sUiVZ+hNbBqGG1uhyJZ+Usyfl9JRu1Ep/8sYEuudWX4I9ms8Ts+L2rtqgz9agaCE6vjSL79yD1nPqlY+hP11xCc9PqKeeowBnh6fEXeH46IUuY32Gcg0FzOWxpoU5AGHmyTOrofc9WXP8yzGW4HLznx/xaQRedfP7k7WTCvSBEtpJTw0npLSvBoG+aZFPmOWfK72TMO+pjG6ZwnW8RqDVp6AaVVk4Ks1yWvVcr9rUMfPUIjxA0mSiIjijGbm6dPxtRcqXDr8XM9pojmgjBddGrU9wv/rmrbb10GdWbNuiIcZs7NTXT [...]
        certificate: ENC[AES256_GCM,data:vxYKbCeNQR9okoN7YKLYYCGD/EsA4/oMRwktkmgKWQVqaIm79+DxYYv0VkWdLf6Vg993tVvYpqgu0TnP9kVe1lkBre/QlH5CXM6tZdO5N2hEqxhLm38+vVcPPlgQZWjxbpIgSvQnmQjDcxWAtk8rQBahufvmcYiuottayhtAO4+lyxRpqafDMTHRIcARQHQkVl1Kji8TpLHHdPltrsaoSVUqaerSX++OUkVNOIgZbRrNuplLvwLeWDQ+GMo4X7tlolUUoQ+xBQl4wftA2drjq26gSdqjnZerYJ/r5R/WfqS9FKXpmgSOf0p/et2NYA1TQ/MD1vtnDJ7bdG7psBx3kyq72rPiJVTngZHxdD2f+2VacjdznasO0xEZqHOO0+AO8NkE7/v/45N83LP3CgZPBbFDCSZob2ihqZVfW8GsN7rkrYHt8rZGT0hFVOCFKQyLFZM4uUdFS5x [...]
        key: ENC[AES256_GCM,data:97BTyOocwIpFDzeyBGUO8ZdANuyc6CVkLX+t+eSioivyOs/1/7ZaOigRa5rRaezqH5URNrHIEw7Dd7oWp4FNmmxRjo8jPT1NjcFHQXgkWNDO0x4XFWfIH8t0m6L46AjL8rBSLSCgh0g+C35YblhJxTyLE0ELvWKcNE0VWIsDTmKVxsMmdZ/iPJoaiTgpdXJX7EhGouxq3/Nx37LQgHXW7Qj0a9He1/YOKqtgLiumunSaYYKKitltFCurH4iJyzbPpPF1RwtvGNdwNw+/My1LFtd51bNVkmGTvpTB4IoTHF2goho8K81OKFMGyRVaT0vwu+8ieHGO/tJTE+JNewFXRdQn4IzHysysmwYBllfnJ+yYUEJCssP5sIlfkcw+KX0FFnEQonkOULPU7tAhLASw39hwpjfinAk7gKWDBN0z5ESHFszRCGHCO9boFIv9XNzKBeD8QqIGdPRDex6IjUX [...]
        termination: ENC[AES256_GCM,data:TeSomQ==,iv:UIZO4dBCCeqNbPWYCznBofwO50ueMiYSXya5Cd0MwEE=,tag:T7rYtiEUD30BBLMZxVeZZQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-10-26T10:24:55Z'
    mac: ENC[AES256_GCM,data:IkuDL6TdewZcJJ+3dicW+Mmd4zhBg/5OvnULWNcCJ58iQr6lWAzQnWNsATxaIvkee6x2UmCWPgy5gu9ECqoYiaaoBzZgC7ZfPgusDPR4LkOmia0o6HsqbElS8YolyUdxxq0seH04IkZ0V0tlNeirg07C5bwILDTUuFAvx74mmhI=,iv:vTjfplGPvyxMDB8xoUFT/8f7dT6y0wRpy5ueb3qG4Pw=,tag:r2G+J5BBBm8O6jmcaEqNhQ==,type:str]
    pgp:
    -   created_at: '2020-10-26T10:24:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//dEnm2tLBgGNxJ7ODnPBN9qx6lRRfWa1HKlihbqNhEyn9
[...]
            =teX+
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-10-26T10:24:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/Q4ovp9zMlgAbPx2wnrUb7vwUCWApqI4Oq6rlJbCA+sr6
[...]
            7jZ9tjqHJ+YNiGB7PeoxfLUnaiGx+njT96VbkCAwdQ==
            =FffO
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-10-26T10:24:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAl3mXlSTgIopKg/5tBB5ii+2IQbPeN91/x/yV1Q4ff7op
[...]
            DngWmZxDIP1yyV476MzalLYD0c+gUSH9OFfE+QUBCw==
            =IdH5
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
